--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@datafire/personio_de_authentication": "^4.0.0",
+    "@datafire/personio_de_personnel": "^4.0.0",
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -21,6 +22,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-filter": "0.0.20",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
@@ -49,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-persist": "^4.3.1",
     "redux-thunk": "^2.3.0"
   }
 }
