--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "axios": "^0.21.4",
     "datafire": "^2.27.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
